styles/styles.css
/* reset */
*  {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/* document */
body {
	font-size: 1rem;
	font-family: "URW Gothic L", "Helvetica", "Arial", sans-serif;
}

.clearfix:after {
	content: ".";
	clear: both;
	display: block;
	visibility: hidden;
	height: 0px;
}

nav, main {
	margin: 5px;
}

main {
	padding: 10px;
	counter-reset: h1counter;
}

nav dl {
	background-color: #F6F6F6;
	border: 2px solid #0060A0;
	padding: 10px;
}

section > footer {
	border: 1px dotted black;
	font-style: italic;
	clear: both;
	margin: 1em 0;
	padding: 2px;
}

section > footer .date {
	float: right;
}

.youtube {
	width: calc(50%);
	height: 15em;
}

#calculator {
	width: calc(50%);
	height: 30em;
}

button {
	background-color: #0060A0;
	color: white;
	padding: 5px;
	border-radius: 0.5em;
}

body > footer {
	background-color: #0060A0;
	color: white;
	padding: 10px;
}

body > footer a {
	color: white;
}

/* images */
header img {
	float: left;
	margin: 5px;
}

figure.floating {
	width: 250px;
	float: left;
	margin: 10px 10px 10px 0;
}

figure.floating img {
	width: 100%;
}

figure object[role=img] {
	width: calc(33%);
	margin-left: calc(33%);
	margin-right: calc(33%);
}

button > img {
	width: 1em;
}

/* text */

a {
	text-decoration: underline;
	color: black;
}

nav a {
	color: blue;
}

a:hover {
	text-decoration: none;
}

a[hreflang]:before {
	background-size: 1em;
	display: inline-block;
	width: 1em;
	height: 0.8em;
	content: '';
}

a[hreflang=en]:before {
	background-image: url('../../media/flag-en.svg');
}

a[hreflang=it]:before {
	background-image: url('../../media/flag-it.svg');
}

a[hreflang=fr]:before {
	background-image: url('../../media/flag-fr.svg');
}

figcaption {
	color: #808080;
}

h1, h2 {
	margin: 1rem 0;
}

section > h1:before {
	content: counter(h1counter);
	counter-increment: h1counter;
	margin-right: 0.5em;
}

h3 {
	color: #0060A0;
	font-size: 1em;
}
h2 {
	font-size: 1em;
}

header h1 {
	font-size: 3rem;
	background-color: #0060A0;
	color: white;
	line-height: 1.5em;
}

nav > h1 {
	font-size: 2rem;
	margin: 10px;
}

section h1 {
	border-bottom: 2px solid black;
}

p {
	margin-top: 1em;
}

section p {
	margin-bottom: 1em;
}

/* lists */

dd {
	margin-left: 1em;
}

li {
	margin-left: 2em;
}

ul > li {
	list-style: circle;
}

/* table */
table {
	display: table;
	border-collapse: collapse;
	width: 100%;
}

tr {
	border-top: 0.1em solid black;
	height: 2em;
}

thead > tr {
	background-color: #0060A0;
	color: white;
	border-style: solid none solid none;
}

table tr:nth-child(2n) {
	background-color: lightblue;
}

td {
	text-align: center;
}

tr *:nth-child(1) {
	text-align: left;
}

/* forms */
legend {
	margin-left: 0.2em;
}

#autorFieldSet > div {
	margin: 0.5em;
}

input[type=text],
input[type=email],
input[type=url],
input[type=date],
select,
textarea {
	width: 100%;
	background-color: #F6F6F6;
	border-style: none none solid none;
	border-color: black;
	border-width: 1px;
	line-height: 2em;
}

input[type=file] {
	width: 100%;
}

#calculator-search {
	width: auto;
}

#rechtlichesFieldSet > div {
	margin: 1em;
	width: 100%;
}

textarea {
	height: 5em;
}

#font-size-form {
	float: right;
}
#font-size-form > label, #font-size-form > input, #font-size-form > output {
	display: inline-block;
	vertical-align: middle;
	padding: 0; margin: 0;
}

